<resources>
    <string name="app_name">SEA Calculator</string>
    <string name="screen">0</string>
    <string name="AC">AC</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="subtract">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="factorial">!</string>
    <string name="zero">0</string>
    <string name="power">^</string>
    <string name="point">.</string>
    <string name="equal_sign">=</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="clr">C</string>
</resources>